k8s/cluster_apps/bootstrap/root/templates/traefik_ingress.yaml
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: stripprefix
#   namespace: kube-system
# spec:
#   stripPrefix:
#     prefixes:
#       - /argocd
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    # - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
    - match: Host(`argocd.dev.local`) && PathPrefix(`/dashboard`) ||  Host(`argocd.dev.local`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
